<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e38d"

    tools:context=".MainActivity">



<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/reletive2"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true">


    <TextView
        android:textColor="#000"
        android:id="@+id/textView"
        android:clickable="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_signup"
        android:focusable="false" />

</LinearLayout>



<RelativeLayout
    android:layout_width="match_parent"
    android:background="#ffff"
    android:id="@+id/reletive1"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"

        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/index" />

</RelativeLayout>


    <RelativeLayout
        android:id="@+id/reletive2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/reletive1">


        <EditText
            android:id="@+id/emailb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#000" />

        <EditText
            android:id="@+id/passwordb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/emailb"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColorHint="#000" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordb"
            android:background="@drawable/roundedbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login"
            android:textColor="@drawable/colorbtoon"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>