<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.patrick.bitvilltenologies.gounihub.Home"
        tools:showIn="@layout/activity_main">

        <RelativeLayout
            android:id="@+id/m2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff" />


            <android.support.design.widget.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                app:menu="@menu/navigation" />
        </RelativeLayout>













<RelativeLayout
    android:layout_width="match_parent"
    android:layout_below="@+id/m2"
    android:layout_height="wrap_content">



    <RelativeLayout
        android:id="@+id/reletive1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="44dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/profileicon"
            android:background="@android:drawable/progress_horizontal"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/EV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_below="@+id/reletive1"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/name1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/roundedbutton"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:targetApi="o" />

    <EditText
        android:layout_width="300dp"
        android:layout_below="@+id/name1"
        android:id="@+id/regno"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:hint="REG NO"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/phone1"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/roundedbutton"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedbutton"
        android:dropDownWidth="20dp"
        android:entries="@array/LEVEL"
        android:prompt="@string/PROMT"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:visibility="visible" />

    <Button
        android:id="@+id/save1"
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/save" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/click_image_to_upload_profile_picture"
        android:textAlignment="center"
        android:textColor="#000" />





</RelativeLayout>




    </RelativeLayout>





</ScrollView>
